# PeoplePartner

./: .gitignore  AUDIT-2026-02-05.md  CLAUDE.md  HR-Command-Center-Marketing-Playbook.md  HR-Command-Center-Roadmap.md  KNOWN_ISSUES.md  LICENSE  PROJECT_STATE.md  README.md  ROADMAP.md  ROADMAP_LAUNCH_PREP.md  demo-video-script-v2.md  demo-video-script.md  features.json  index.html  package-lock.json  package.json  peoplepartner-brand-review.md  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml
docs/: 1000-Copies-Launch-Plan.md  CODE_SIGNING.md  HR-Command-Center-Design-Architecture.md  HR-Command-Center-Roadmap.md  KNOWN_ISSUES.md  OVERNIGHT_AGENT.md  PROGRESS.md  ROADMAP.md  SESSION_PROTOCOL.md
docs/archive/: PROGRESS_LaunchHardening.md  PROGRESS_LaunchPrep_B-E2E.md  (+5 more)
prompts/: overnight-agent.md
proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
scripts/: dev-init.sh  generate-test-data.ts  import-test-data.ts  run-extraction.ts
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 005_dei_audit.sql  006_drop_insight_canvas.sql  007_documents.sql  008_document_chunks_unique.sql  009_license_validation_cache.sql  010_schema_migrations.sql  011_audit_log_append_only.sql  012_license_signed_token.sql
src-tauri/src/: analytics.rs  analytics_templates.rs  audit.rs  backup.rs  bulk_import.rs  chat.rs  company.rs  context.rs  conversations.rs  data_quality.rs  db.rs  dei.rs  device_id.rs  documents.rs  employees.rs  enps.rs  file_parser.rs  highlights.rs  keyring.rs  lib.rs  license_cache.rs  license_signing.rs  logging.rs  main.rs  memory.rs  models.rs  network.rs  performance_ratings.rs  performance_reviews.rs  pii.rs  provider.rs  review_cycles.rs  settings.rs  signals.rs  trial.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
(+95 files in other folders)
