[package]
name = "people-partner"
version = "0.2.3"
description = "Your company's HR brain—private, always in context, always ready to help."
authors = ["People Partner"]
edition = "2021"

[lib]
name = "people_partner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"  # CancellationToken for streaming cancellation (issue #25)

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
hmac = "0.12"
sha2 = "0.11"
hex = "0.4"
jsonwebtoken = "9"  # EdDSA / Ed25519 JWT verification for signed license responses (issue #22)

# File parsing (CSV, Excel)
csv = "1.3"
calamine = "0.26"

# Document parsing
pdf-extract = "0.10"
docx-rs = "0.4.20"
notify = { version = "7", features = ["macos_fsevent"] }

# PII detection
regex = "1"

# Text processing for excerpting
unicode-segmentation = "1.10"

# Encryption & compression for backup
aes-gcm = "0.10"
argon2 = "0.5"
flate2 = "1.0"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5"
security-framework-sys = "2.15"

[dev-dependencies]
tempfile = "3"
base64 = "0.22"  # license_signing tests construct Ed25519 PEMs manually (issue #22)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
